Change logo to svg in the index html files.

--- a/web/index.html
+++ b/web/index.html
@@ -145,7 +145,7 @@
     <!-- The root element for your Expo app. -->
     <div id="root">
       <div id="splash">
-        <!-- VerusSky Logo -->
+        <!-- VerusSky SVG -->
         <svg width="201" height="201" viewBox="0 0 201 201" fill="none" xmlns="http://www.w3.org/2000/svg">
           <g clip-path="url(#clip0_1_20)">
             <path d="M100.5 201C156.005 201 201 156.005 201 100.5C201 44.9954 156.005 0 100.5 0C44.9954 0 0 44.9954 0 100.5C0 156.005 44.9954 201 100.5 201Z" fill="white"/>
